Improvements to epil figures, Jeff text feedback improvements

--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -54,11 +54,11 @@ There are four sections:
 
 |                   | Model component    | Latent field | Hyperparameter |
 | ----------------- | ------------------ | ------------ | -------------- |
-| \@ref(hiv-prev)   | HIV prevalence     | $22 + 5n$    | 9              |
-| \@ref(art-cov)    | ART coverage       | $25 + 5n$    | 9              |
-| \@ref(hiv-inc)    | HIV incidence rate | $2 + n$      | 3              |
-| \@ref(anc-test)   | ANC testing        | $2 + 2n$     | 2              |
-| \@ref(art-attend) | ART attendance     | $n$          | 1              |
+| Section \@ref(hiv-prev)   | HIV prevalence     | $22 + 5n$    | 9              |
+| Section \@ref(art-cov)    | ART coverage       | $25 + 5n$    | 9              |
+| Section \@ref(hiv-inc)    | HIV incidence rate | $2 + n$      | 3              |
+| Section \@ref(anc-test)   | ANC testing        | $2 + 2n$     | 2              |
+| Section \@ref(art-attend) | ART attendance     | $n$          | 1              |
 |                   | Total              | $51 + 14n$   | 24             |
 
 Table: (\#tab:process) The Naomi model can be conceptualised as having five processes. This table gives the number of latent field parameters and hyperparameters in each process, where $n$ is the number of districts in the country.
