--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -517,15 +517,16 @@ This package is briefly mentioned so as to note that the function `mgcv::ginla` 
 
 ## A universal INLA implementation {#universal}
 
-This section is about implementation of the INLA method, with both Gaussian and Laplace marginal approximations, using AD via the `TMB` package.
+This section is about implementation of the INLA method using AD via the `TMB` package.
+Both the Gaussian and Laplace latent field marginal approximations are implemented.
 The implementation is universal in that it is compatible with any model with a `TMB` C++ template, rather than being based on a restrictive formula interface.
 The `TMB` probabilistic programming language is described as "universal" in that it is an extension of the Turing-complete general purpose language C++.
 
 @martino2019integrated note that "implementing INLA from scratch is a complex task" and as a result "applications of INLA are limited to the (large class of) models implemented [in `R-INLA`]".
 A universal INLA implementation facilitates application of the method to models which are not compatible with `R-INLA`.
 The Naomi model is one among many examples.
-Section 5 of @osgood2023statistical notes that "`R-INLA` is capable of using higher-quality approximations than `TMB`" and "in return `TMB` is applicable to a wider class of models".
-Yet there is no inherent reason for these capabilities to be in conflict: it is possible to have both high-quality approximation and flexibility.
+Section 5 of @osgood2023statistical notes that "`R-INLA` is capable of using higher-quality approximations than `TMB`" (hyperparameter integration and latent field Laplace marginals) and "in return `TMB` is applicable to a wider class of models".
+Yet there is no inherent reason for these capabilities to be in conflict: it is possible to have both high-quality approximations and flexibility.
 The potential benefits of a more flexible INLA implementation based on AD were noted by @skaug2009approximate (a coauthor of `TMB`) in discussion of @rue2009approximate, who noted that such a system would be "fast, flexible, and easy-to-use", as well as "automatic from a user's perspective".
 As this suggestion was made close to 15 years ago, it is surprising that its potential remains unrealised. 
 
@@ -533,7 +534,7 @@ I demonstrate the universal implementation with two examples:
 
 1. Section \@ref(epil) considers a generalised linear mixed model (GLMM) of an epilepsy drug.
 This example was used in Section 5.2 of @rue2009approximate, and the model is compatible with `R-INLA`.
-For some parameters there is a notable difference in approximation error depending on use of Gaussian (Section) or Laplace (Section) marginals.
+For some parameters there is a notable difference in approximation error depending on use of Gaussian or Laplace marginals.
 This example is therefore used to demonstrate the correspondence between my Laplace marginal implementation, and that of `R-INLA` with `method` set to `"laplace"`.
 2. Section \@ref(unknown) considers a model which is not is not compatible with `R-INLA`.
 This example is used as a demonstration of the benefit of a more generally applicable INLA implementation.
@@ -568,17 +569,22 @@ The patient $\epsilon_i \sim \mathcal{N}(0, 1/\tau_\epsilon)$ and patient-visit 
 knitr::include_graphics("figures/naomi-aghq/epil.png")
 ```
 
-Consider inference for the epilepsy GLMM using a range of approaches:
+|             | Method         | Software      |
+| ------------|----------------|---------------|
+| Section \@ref(epil-inla)             | Gaussian, EB   | `R-INLA`      | 
+| Section \@ref(epil-inla)             | Gaussian, grid | `R-INLA`      |
+| Section \@ref(epil-inla)             | Laplace, EB    | `R-INLA`      | 
+| Section \@ref(epil-inla)             | Laplace, grid  | `R-INLA`      |
+| Section \@ref(epil-gauss-eb-tmb)     | Gaussian, EB   | `TMB`         | 
+| Section \@ref(epil-gauss-aghq-tmb)   | Gaussian, AGHQ | `TMB` and `aghq` |
+| Section \@ref(epil-laplace-eb-tmb)   | Laplace, EB    | `TMB`         |
+| Section \@ref(epil-laplace-aghq-tmb) | Laplace, AGHQ  | `TMB` and `aghq` |
+| Section \@ref(epil-nuts-rstan)       | NUTS           | `rstan`       |
 
-1. INLA with `R-INLA` (Section \@ref(epil-inla)) with varied `strategy` and `int.strategy` controls;
-2. Gaussian marginals and EB with `TMB` (Section \@ref(epil-gauss-eb-tmb));
-3. Gaussian marginals and AGHQ with `TMB` (Section \@ref(epil-gauss-aghq-tmb));
-4. Laplace marginals and EB with `TMB` (Section \@ref(epil-laplace-eb-tmb));
-5. Laplace marginals and AGHQ with `TMB` (Section \@ref(epil-laplace-aghq-tmb));
-6. NUTS with `tmbstan` (Section \@ref(epil-nuts));
-7. NUTS with `rstan` (Section \@ref(epil-nuts-rstan)).
+Table: (\#tab:epil-approaches) The inference methods and software considered.
 
-Section \@ref(epil-comparison) compares the results from these approaches.
+Inference for the epilepsy GLMM was conducted using a range of approaches (Table \@ref(tab:epil-approaches)).
+Section \@ref(epil-comparison) compares the results.
 The foremost objective of this exercise is to demonstrate correspondence between inferences obtained from `R-INLA` and those from `TMB`.
 Furthermore, illustrative code is used throughout this section to enhance understanding of the methods and software used.
 As such, this section is more verbose than future sections.
@@ -586,7 +592,7 @@ As such, this section is more verbose than future sections.
 #### INLA with `R-INLA` {#epil-inla}
 
 The epilepsy data are available from the `R-INLA` package.
-The covariates may be obtained and transformed by:
+The covariates may be obtained and their transformations centred by:
 
 ```r
 centre <- function(x) (x - mean(x))
@@ -599,7 +605,7 @@ Epil <- Epil %>%
          CBT     = centre(Trt * log(Base/4)))
 ```
 
-The structured additive predictor (Equation \@ref(eq:epil)) is then specified by:
+The structured additive predictor in Equation \@ref(eq:epil) is then specified by:
 
 ```r
 formula <- y ~ 1 + CTrt + ClBase4 + CV4 + ClAge + CBT +
@@ -649,19 +655,34 @@ As described in Section \@ref(r-inla), `strat` may be set to one of `"gaussian"`
 
 #### Gaussian marginals and EB with `TMB` {#epil-gauss-eb-tmb}
 
-A C++ template for the log-posterior of the model is required to obtain inferences with `TMB`.
+With `TMB`, the log-posterior of the model is specified using a C++ template.
 For simple models, writing this template is usually a more involved task then specifying the formula object required for `R-INLA`.
 The `TMB` C++ template `epil.cpp` for the epilepsy GLMM is in Appendix \@ref(tmb-epil).
-This template specifies exactly the same model as `R-INLA` in Section \@ref(epil-inla) (in itself this is non-trivial).
+This template specifies exactly the same model as `R-INLA` in Section \@ref(epil-inla).
+It is not trivial to do this, because each detail of the model must match.
 
 Lines with a `DATA` prefix specify the fixed data inputs to be passed to `TMB`.
+
+```C++
+DATA
+```
+
 Examples of data inputs include the data $\mathbf{y}$ and the covariate design matrix.
 Lines with a `PARAMETER` prefix specify the parameters $\boldsymbol{\mathbf{\phi}} = (\mathbf{x}, \boldsymbol{\mathbf{\theta}})$ to be estimated.
+
+```C++
+PARAMETER
+```
+
 It is recommended to specify all parameters on the real scale to help performance of the optimisation procedure.
 More familiar versions of parameters, such as the precision rather than log precision, may be created outside the `PARAMETER` section.
 Lines of the form `nlp -= ddist(...)` increment the negative log-posterior, where `dist` is the name of a distribution.
 
-The `TMB` user template must first be compiled and linked:
+```C++
+nlp -= ddist(...)
+```
+
+In R, the `TMB` user template may now be compiled and linked:
 
 ```r
 compile("epil.cpp")
@@ -699,8 +720,8 @@ opt <- nlminb(
 )
 ```
 
-The `sdreport` function is used to evaluate the Hessian matrices at a particular value.
-Typically, these Hessian matrices are for the hyperparameters.
+The `sdreport` function is used to evaluate the Hessian matrix of the parameters at a particular value.
+Typically, these Hessian matrices are for the hyperparameters, and based on the marginal Laplace approximation.
 Setting `par.fixed` to the previously obtained `opt$par` returns $\hat{\boldsymbol{\mathbf{H}}}_\texttt{LA}$.
 However, by setting `getJointPrecision = TRUE` the the full Hessian matrix for the hyperparameters and latent field together is returned:
 
@@ -730,8 +751,8 @@ fit <- glmmTMB(
 
 #### Gaussian marginals and AGHQ with `TMB` {#epil-gauss-aghq-tmb}
 
-The objective function `obj` created in Section \@ref(epil-gauss-eb-tmb) may be directly passed to `aghq` to perform inference by integrating over the hyperparameters using AGHQ.
-The argument `k` specifies the number of quadrature nodes to be used per hyperparameters dimension.
+The objective function `obj` created in Section \@ref(epil-gauss-eb-tmb) may be directly passed to `aghq` to perform inference by integrating the marginal Laplace approximation over the hyperparameters using AGHQ.
+The argument `k` specifies the number of quadrature nodes to be used per hyperparameter dimension.
 Here there are two hyperparameters $\boldsymbol{\mathbf{\theta}} = (\tau_\epsilon, \tau_\nu)$, and `k` is set to three, such that in total there are $3^2 = 9$ quadrature nodes:
 
 ```r
@@ -749,9 +770,9 @@ For a more complete `aghq` vignette, see @stringer2021implementing.
 
 #### Laplace marginals and EB with `TMB` {#epil-laplace-eb-tmb}
 
-The Laplace latent field marginal $\tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$ may be obtained using `TMB` by setting `random` to $\mathbf{x}_{-i}$ in the `MakeADFun` function call.
+The Laplace latent field marginal $\tilde p_\texttt{LA}(x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$ may be obtained using `TMB` by setting `random` to $\mathbf{x}_{-i}$ in the `MakeADFun` function call to approximate $p(\mathbf{x}_{-i} \, | \,x_i, \boldsymbol{\mathbf{\theta}}, \mathbf{y})$ with a Gaussian distribution.
 However, it is not directly possible to do this, because the `random` argument takes a vector of strings as input (e.g. `c("beta", "epsilon", "nu")`) and does not have a native method for indexing.
-Instead, the following steps can be taken to modify the `TMB` C++ template to enable the desired indexing:
+Instead, I took the following steps to modify the `TMB` C++ template and enable the desired indexing:
 
 1. Include `DATA_INTEGER(i)` to pass the index $i$ to `TMB` via the `data` argument of `MakeADFun`.
 2. Concatenate the latent field to `PARAMETER_VECTOR(x_minus_i)` and `PARAMETER(x_i)` such that `random` can be set to `x_minus_i` in the call to `MakeADFun`.
@@ -781,7 +802,7 @@ The latent field marginals approximation is then directly proportional to the un
 &\propto \tilde p_\texttt{LA}(x_i, \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y}).
 \end{align}
 This expression may be evaluated at a set of GHQ nodes $z \in \mathcal{Q}(1, l)$ adapted $z \mapsto x_i(z)$ based on the mode and standard deviation of the Gaussian marginal.
-Here, $l = 5$ was chosen.
+Here, $l = 5$ quadrature nodes were chosen to allow spline interpolation of the resulting log-posterior.
 Each evaluation of `obj_i`, which involves an inner optimisation loop to compute the Laplace approximation, can be initialised by $\mathbf{x}_{-i}$ set to the mode of the full $N$-dimensional Gaussian approximation $p_\texttt{G}(\mathbf{x} \, | \, \hat{\boldsymbol{\mathbf{\theta}}}_\texttt{LA}, \mathbf{y})$ with the $i$th entry removed $\hat{\mathbf{x}}(\boldsymbol{\mathbf{\theta}})_{-i}$.
 This is an efficient approach because the $(N - 1)$-dimensional posterior mode, with $x_i$ fixed, is likely to be similar to the $N$-dimensional posterior mode with the $i$th entry removed.
 A normalised posterior can be obtained by computing a de novo posterior normalising constant based on the set of evaluated $l$ quadrature nodes.
@@ -799,7 +820,7 @@ Although this approach would be more efficient, if else statements on updateable
 
 #### Laplace marginals and AGHQ with `TMB` {#epil-laplace-aghq-tmb}
 
-The approach taken in Section \@ref(epil-laplace-eb-tmb) may be extended by integrating with respect to the hyperparameters.
+The approach taken in Section \@ref(epil-laplace-eb-tmb) may be extended by integrating the marginal Laplace approximation with respect to the hyperparameters.
 To perform this integration, the quadrature nodes used to integrate $p_\texttt{LA}({\boldsymbol{\mathbf{\theta}}}, \mathbf{y})$ may be reused.
 The latent field marginal approximation is then
 \begin{equation}
@@ -814,7 +835,7 @@ Integration over the hyperparameters requires each of the $N$ objective function
 Running NUTS with `tmbstan` using the objective function `obj` is easy to do:
 
 ```r
-fit <- tmbstan::tmbstan(obj = obj, chains = 4, refresh = 0, laplace = FALSE)
+fit <- tmbstan::tmbstan(obj = obj, chains = 4, laplace = FALSE)
 ```
 
 As specified above, the objective function with no marginal Laplace approximation is used.
@@ -830,7 +851,7 @@ The `Stan` template was validated as be equivalent to the `TMB` template up to a
 Inferences from `Stan` may be obtained by
 
 ```r
-fit <- rstan::stan(file = "epil.stan", data = dat, chains = 4, refresh = 0)
+fit <- rstan::stan(file = "epil.stan", data = dat, chains = 4)
 ```
 
 Convergence diagnostics for NUTS with `rstan` are in Appendix \@ref(rstan-epil).
@@ -842,13 +863,13 @@ Furthermore, the posterior distributions, not only point estimates, were also hi
 Figure \@ref(fig:intercept-comparison) shows highly similar ECDF difference plots for Gaussian or Laplace marginals from `TMB` and `R-INLA` (as compared with results from NUTS implemented in `tmbstan`) for $\beta_0$.
 These results provide strong evidence that the approaches developed above to implement INLA in `TMB` are sound.
 
-(ref:beta-mean-sd) Difference in the posterior summary estimate obtained from NUTS (implemented with `tmbstan`) as compared to obtained from a Gaussian or Laplace marginal with quadrature over the hyperparameters Results from `R-INLA` and `TMB` are highly similar.
+(ref:beta-mean-sd) Percentage difference in posterior summary estimate obtained from NUTS as compared to that obtained from a Gaussian or Laplace marginal with quadrature over the hyperparameters. NUTS results were obtained with `tmbstan`. Results from `R-INLA` and `TMB` are similar, especially for the posterior mean, but do differ in places.
 
 ```{r beta-mean-sd, fig.cap="(ref:beta-mean-sd)"}
 knitr::include_graphics("figures/naomi-aghq/beta-mean-sd.png")
 ```
 
-(ref:intercept-comparison) The ECDF difference for the $\beta_0$ latent field parameter. An ECDF difference of zero corresponds to obtaining exactly the same results as NUTS, taken to be the gold-standard. The change in ECDF difference is large as to whether Gaussian or Laplace marginals are used. Results obtained for both methods using the `R-INLA` and `TMB` implementations are highly similar.
+(ref:intercept-comparison) The ECDF and ECDF difference for the $\beta_0$ latent field parameter. For this parameter, the Gaussian results are inaccurate, and corrected by the Laplace. An ECDF difference of zero corresponds to obtaining exactly the same results as NUTS, taken to be the gold-standard. Results obtained using `R-INLA` and `TMB` implementations are highly similar.
 
 ```{r intercept-comparison, fig.cap="(ref:intercept-comparison)"}
 knitr::include_graphics("figures/naomi-aghq/intercept-comparison.png")
