--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -24,6 +24,12 @@ knitr::include_graphics("../figures/hiv-aids/naomi-continent.png")
 
 #
 
+```{r naomi-continent, echo=FALSE, out.width="95%"}
+knitr::include_graphics("../figures/beyond-borders/geometry-graph.png")
+```
+
+#
+
 ```{r intercept-comparison, echo=FALSE, out.width="95%"}
 knitr::include_graphics("../figures/naomi-aghq/intercept-comparison.png")
 ```
