--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -495,6 +495,7 @@ Template Model Builder [`TMB`; @kristensen2016tmb] is an R package which impleme
 In `TMB` derivatives are obtained using automatic differentiation, also known as algorithmic differentiation [AD; @baydin2017automatic].
 The approach of AD is to decompose any function into a sequence of elementary operations with known derivatives.
 The known derivatives of the elementary operations may then be composed by repeat use of the chain rule to obtain the function's derivative.
+A review of AD and how it can be efficiently implemented is provided by @margossian2019review.
 `TMB` uses the C++ package `CppAD` [@cppaddocumentation] for AD [Section 3; @kristensen2016tmb].
 The development of `TMB` was strongly inspired by the Automatic Differentiation Model Builder [ADMB; @fournier2012ad; @bolker2013strategies] project.
 An algorithm is used in `TMB` to automatically determine matrix sparsity structure [Section 4.2; @kristensen2016tmb].
