--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -24,7 +24,7 @@ knitr::include_graphics("../figures/hiv-aids/naomi-continent.png")
 
 #
 
-```{r naomi-continent, echo=FALSE, out.width="95%"}
+```{r geometry-graph, echo=FALSE, out.width="95%"}
 knitr::include_graphics("../figures/beyond-borders/geometry-graph.png")
 ```
 
