--- a/references.bib
+++ b/references.bib
@@ -2259,3 +2259,14 @@ doi = {10.1201/9781420072884-c30}
   publisher={Taylor \& Francis}
 }
 
+@article{margossian2019review,
+  title={A review of automatic differentiation and its efficient implementation},
+  author={Margossian, Charles C},
+  journal={Wiley interdisciplinary reviews: data mining and knowledge discovery},
+  volume={9},
+  number={4},
+  pages={e1305},
+  year={2019},
+  publisher={Wiley Online Library}
+}
+
