--- a/references.bib
+++ b/references.bib
@@ -2270,3 +2270,8 @@ doi = {10.1201/9781420072884-c30}
   publisher={Wiley Online Library}
 }
 
+@article{gelman2006prior,
+  title={Prior distributions for variance parameters in hierarchical models (comment on article by Browne and Draper)},
+  author={Gelman, Andrew},
+  year={2006}
+}
