--- a/figures/beyond-borders/maup1.tex
+++ b/figures/beyond-borders/maup1.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 
-\begin{tikzpicture}
+\begin{tikzpicture}[scale = 1]
 \node[] at (-1, 1.5) {A};nonumber
 \node[] at (-0.5, 0) {1};
 \node[] at (0.5, 0) {2};
@@ -24,27 +24,27 @@
 \draw (4.5,0) circle (1);
 \draw (4.5,0) circle (1.5);
 
-\node[] at (-1, -2) {C};
-\node[] at (-0.5, -3.5) {1};
-\node[] at (0.5, -3.5) {2};
-\node[] at (1.5, -3.5) {3};
-\draw (-1,-3) -- (2,-2);
-\draw (-1,-4) -- (2,-5);
-\draw (-1,-4) -- (-1,-3);
-\draw (2,-5) -- (2,-2);
-\draw (0,-0.8333 - 3.5) -- (0,0.8333 - 3.5);
-\draw (1,-1.1666 - 3.5) -- (1,1.1666 - 3.5);
+\node[] at (7, 1.5) {C};
+\node[] at (7.5, 0) {1};
+\node[] at (8.5, 0) {2};
+\node[] at (9.5, 0) {3};
+\draw (7, 0.5) -- (10, 1.5);
+\draw (7, -0.5) -- (10, -1.5);
+\draw (7, -0.5) -- (7, 0.5);
+\draw (10, -1.5) -- (10, 1.5);
+\draw (8, -0.8333) -- (8, 0.8333);
+\draw (9, -1.1666) -- (9, 1.1666);
 
-\node[] at (3, 1.5 - 3.5) {D};nonumber
-\node[] at (3.25, 0 - 3.5) {1};
-\node[] at (4, 0 - 3.5) {2};
-\node[] at (5.25, 0 - 3.5) {3};
-\draw (3,1 - 3.5) -- (6,1 - 3.5);
-\draw (3,-1 - 3.5) -- (6,-1 - 3.5);
-\draw (3,-1 - 3.5) -- (3,1 - 3.5);
-\draw (6,-1 - 3.5) -- (6,1 - 3.5);
-\draw (3.5,-1 - 3.5) -- (3.5,1 - 3.5);
-\draw (4.5,-1 - 3.5) -- (4.5,1 - 3.5);
+\node[] at (11, 1.5) {D};nonumber
+\node[] at (11.25, 0) {1};
+\node[] at (12, 0) {2};
+\node[] at (13.25, 0) {3};
+\draw (11, 1) -- (14, 1);
+\draw (11, -1) -- (14, -1);
+\draw (11, -1) -- (11, 1);
+\draw (14, -1) -- (14, 1);
+\draw (11.5, -1) -- (11.5, 1);
+\draw (12.5, -1) -- (12.5, 1);
 
 \end{tikzpicture}
 
