Start working on Loa loa example

--- a/06-naomi-aghq.Rmd
+++ b/06-naomi-aghq.Rmd
@@ -580,6 +580,7 @@ knitr::include_graphics("figures/naomi-aghq/epil.png")
 | Section \@ref(epil-gauss-aghq-tmb)   | Gaussian, AGHQ | `TMB` and `aghq` |
 | Section \@ref(epil-laplace-eb-tmb)   | Laplace, EB    | `TMB`         |
 | Section \@ref(epil-laplace-aghq-tmb) | Laplace, AGHQ  | `TMB` and `aghq` |
+| Section \@ref(epil-nuts)             | NUTS           | `tmbstan`     |
 | Section \@ref(epil-nuts-rstan)       | NUTS           | `rstan`       |
 
 Table: (\#tab:epil-approaches) The inference methods and software considered.
